--- a/HomeWorkTabBar/XIB/CustomXIBView.xib
+++ b/HomeWorkTabBar/XIB/CustomXIBView.xib
@@ -17,64 +17,106 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QY7-Wf-CkR">
                     <rect key="frame" x="0.0" y="0.0" width="343" height="174"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xi-Jf-swp">
-                            <rect key="frame" x="32" y="24" width="192" height="16"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gB6-g0-Jmn">
+                            <rect key="frame" x="20" y="20" width="245" height="24"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="245" id="u3S-FB-YE0"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="12"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                    <integer key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="layer.borderUIColor">
+                                    <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.02.2022 - 1.04.2022 Скидка 10%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8xi-Jf-swp">
+                            <rect key="frame" x="32" y="24" width="291" height="17"/>
+                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJv-sY-zTg">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Курсы по Android разработкe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJv-sY-zTg">
                             <rect key="frame" x="20" y="56" width="303" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pft-5R-zyr">
-                            <rect key="frame" x="20" y="125" width="65" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9 800 Р" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pft-5R-zyr">
+                            <rect key="frame" x="20" y="127" width="65" height="21"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="et8-8L-IIK">
-                            <rect key="frame" x="10" y="82" width="89" height="30.333333333333329"/>
+                            <rect key="frame" x="10" y="77" width="100" height="31"/>
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="Button">
-                                <fontDescription key="titleFontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
+                            <buttonConfiguration key="configuration" style="plain" title="Подробнее">
+                                <fontDescription key="titleFontDescription" type="system" weight="light" pointSize="14"/>
                             </buttonConfiguration>
+                            <connections>
+                                <action selector="moreButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="XUe-2x-btj"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMt-zO-yTs">
                             <rect key="frame" x="251" y="118" width="72" height="36"/>
+                            <color key="backgroundColor" systemColor="systemBlueColor"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                            <buttonConfiguration key="configuration" style="plain">
+                                <attributedString key="attributedTitle">
+                                    <fragment content="+">
+                                        <attributes>
+                                            <font key="NSFont" size="35" name="Helvetica-Light"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                            </buttonConfiguration>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="blueButtonActionWith_sender:" destination="iN0-l3-epB" eventType="touchUpInside" id="XNB-0E-31R"/>
+                            </connections>
                         </button>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gB6-g0-Jmn">
-                            <rect key="frame" x="20" y="20" width="236" height="24"/>
-                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="8xi-Jf-swp" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="24" id="ENx-Ex-nm6"/>
                         <constraint firstItem="8xi-Jf-swp" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="32" id="Fle-2o-VZE"/>
+                        <constraint firstAttribute="width" constant="343" id="HGw-Sz-dre"/>
                         <constraint firstItem="hJv-sY-zTg" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="56" id="Jtk-fL-yFC"/>
+                        <constraint firstItem="pft-5R-zyr" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="127" id="KM5-V5-Qgb"/>
                         <constraint firstItem="aMt-zO-yTs" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="118" id="OIH-Ze-h8o"/>
                         <constraint firstItem="et8-8L-IIK" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="10" id="Pdw-y7-Vzb"/>
                         <constraint firstItem="gB6-g0-Jmn" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="20" id="UgP-Wd-30V"/>
-                        <constraint firstItem="pft-5R-zyr" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="125" id="XMd-c4-JuO"/>
                         <constraint firstAttribute="trailing" secondItem="aMt-zO-yTs" secondAttribute="trailing" constant="20" id="atH-2c-677"/>
                         <constraint firstAttribute="bottom" secondItem="gB6-g0-Jmn" secondAttribute="bottom" constant="130" id="ceC-wQ-5WE"/>
-                        <constraint firstAttribute="trailing" secondItem="8xi-Jf-swp" secondAttribute="trailing" constant="119" id="cvP-nG-K1g"/>
-                        <constraint firstAttribute="trailing" secondItem="gB6-g0-Jmn" secondAttribute="trailing" constant="87" id="di1-T9-N5s"/>
+                        <constraint firstAttribute="trailing" secondItem="8xi-Jf-swp" secondAttribute="trailing" constant="20" id="cvP-nG-K1g"/>
                         <constraint firstAttribute="bottom" secondItem="aMt-zO-yTs" secondAttribute="bottom" constant="20" id="dsw-bL-a8t"/>
                         <constraint firstItem="gB6-g0-Jmn" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="20" id="jeI-Ob-c1O"/>
-                        <constraint firstAttribute="trailing" secondItem="et8-8L-IIK" secondAttribute="trailing" constant="244" id="nNa-5l-9FH"/>
+                        <constraint firstItem="et8-8L-IIK" firstAttribute="top" secondItem="hJv-sY-zTg" secondAttribute="bottom" id="nFo-4y-m5K"/>
+                        <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="et8-8L-IIK" secondAttribute="trailing" constant="244" id="nNa-5l-9FH"/>
+                        <constraint firstAttribute="height" constant="174" id="nO9-5s-xf0"/>
                         <constraint firstItem="hJv-sY-zTg" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="20" id="nsr-rF-F4Z"/>
                         <constraint firstAttribute="trailing" secondItem="pft-5R-zyr" secondAttribute="trailing" constant="258" id="oky-Ie-jh1"/>
                         <constraint firstAttribute="trailing" secondItem="hJv-sY-zTg" secondAttribute="trailing" constant="20" id="pDL-fv-usF"/>
                         <constraint firstItem="pft-5R-zyr" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="20" id="v72-gB-CC0"/>
                         <constraint firstItem="aMt-zO-yTs" firstAttribute="leading" secondItem="QY7-Wf-CkR" secondAttribute="leading" constant="251" id="wdt-6U-ICu"/>
-                        <constraint firstItem="et8-8L-IIK" firstAttribute="top" secondItem="QY7-Wf-CkR" secondAttribute="top" constant="82" id="wnr-Jt-4Zb"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -86,12 +128,29 @@
                 <constraint firstItem="QY7-Wf-CkR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="xh0-Yy-fwa"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="157.69230769230768" y="22.748815165876778"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                    <integer key="value" value="10"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="xibBackEventView" destination="gB6-g0-Jmn" id="AQS-li-c1C"/>
+                <outlet property="xibBlueButton" destination="aMt-zO-yTs" id="kaW-MG-UYZ"/>
+                <outlet property="xibCourseEventLabel" destination="8xi-Jf-swp" id="aI9-jR-d8x"/>
+                <outlet property="xibCourseNameLabel" destination="hJv-sY-zTg" id="s9X-9G-Hyo"/>
+                <outlet property="xibCustomCourseView" destination="QY7-Wf-CkR" id="DK3-pP-AdF"/>
+                <outlet property="xibMoreButton" destination="et8-8L-IIK" id="Ugw-o4-oY3"/>
+                <outlet property="xibPriceLabel" destination="pft-5R-zyr" id="aT2-AP-jKY"/>
+            </connections>
+            <point key="canvasLocation" x="-148" y="17"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
