--- a/HomeWorkTabBar/View/CustomXIBView.xib
+++ b/HomeWorkTabBar/View/CustomXIBView.xib
@@ -8,19 +8,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="HomeWorkTabBar" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewCustomXIBView" customModule="HomeWorkTabBar" customModuleProvider="target">
             <connections>
-                <outlet property="xibBackEventView" destination="gB6-g0-Jmn" id="7aj-1B-Z9b"/>
-                <outlet property="xibBlueButton" destination="aMt-zO-yTs" id="ueb-5g-BOy"/>
-                <outlet property="xibCourseEventLabel" destination="8xi-Jf-swp" id="435-v5-cp1"/>
-                <outlet property="xibCourseNameLabel" destination="hJv-sY-zTg" id="Cm7-bO-kEf"/>
-                <outlet property="xibCustomCourseView" destination="QY7-Wf-CkR" id="yV8-pW-VvP"/>
-                <outlet property="xibMoreButton" destination="et8-8L-IIK" id="43u-ye-hMf"/>
-                <outlet property="xibPriceLabel" destination="pft-5R-zyr" id="b8k-tU-I6C"/>
+                <outlet property="newXibBackEventView" destination="gB6-g0-Jmn" id="36t-2U-35x"/>
+                <outlet property="newXibCourseEventLabel" destination="8xi-Jf-swp" id="lRc-6N-Dsj"/>
+                <outlet property="newXibCourseNameLabel" destination="hJv-sY-zTg" id="icy-dC-h6f"/>
+                <outlet property="newXibCouseView" destination="QY7-Wf-CkR" id="eI5-4y-RJv"/>
+                <outlet property="newXibMoreButton" destination="et8-8L-IIK" id="NBH-t0-HQN"/>
+                <outlet property="newXibPriceLabel" destination="pft-5R-zyr" id="pxK-0w-TFa"/>
+                <outlet property="newxibBlueButton" destination="aMt-zO-yTs" id="3qZ-UY-KN8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CustomView" customModule="HomeWorkTabBar" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="343" height="174"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -70,9 +70,6 @@
                             <buttonConfiguration key="configuration" style="plain" title="Подробнее">
                                 <fontDescription key="titleFontDescription" type="system" weight="light" pointSize="14"/>
                             </buttonConfiguration>
-                            <connections>
-                                <action selector="moreButtonAction:" destination="-1" eventType="touchUpInside" id="uvP-M1-vYU"/>
-                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMt-zO-yTs">
                             <rect key="frame" x="251" y="118" width="72" height="36"/>
@@ -93,9 +90,6 @@
                                     <integer key="value" value="5"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="blueButtonActionWith_sender:" destination="-1" eventType="touchUpInside" id="4HQ-wg-nUv"/>
-                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
