--- a/HomeWorkTabBar/View/CustomXIBView.xib
+++ b/HomeWorkTabBar/View/CustomXIBView.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewCustomXIBView" customModule="HomeWorkTabBar" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomXIBView" customModule="HomeWorkTabBar" customModuleProvider="target">
             <connections>
                 <outlet property="newXibBackEventView" destination="gB6-g0-Jmn" id="36t-2U-35x"/>
                 <outlet property="newXibCourseEventLabel" destination="8xi-Jf-swp" id="lRc-6N-Dsj"/>
